adjusted element visibility to prevent its position absolute to interfere with the mobile design

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,4 +1,7 @@
+@use '../app/styles/breakpoints' as bp;
+
 #cursor-effect {
+    display: none;
     width: 120px;
     height: 120px;
     position: fixed;
@@ -14,4 +17,10 @@
     border-radius: 50%;
     transform: translate(-50%, -50%);
     filter: blur(10px);
+}
+
+@media(min-width: bp.$bp-lg) {
+    #cursor-effect{
+        display: block;
+    }
 }
